@@ -1,4 +1,21 @@
 <?php
+/*
+	Copyright (C) 2007, 2008, 2009, 2010 Abel Cheung
+
+	This program is free software: you can redistribute it and/or modify
+	it under the terms of the GNU Affero General Public License as
+	published by the Free Software Foundation, either version 3 of the
+	License, or (at your option) any later version.
+
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU Affero General Public License for more details.
+
+	You should have received a copy of the GNU Affero General Public License
+	along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
 	// this file must be either 3 or 4 levels from WP top dir
 	if (file_exists ('../../../../wp-config.php'))
 		require_once ('../../../../wp-config.php');
